--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,21 @@
     <artifactId>summary-in-example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <properties>
+        <java.version>11</java.version>
+        <maven.compiler.version>3.8.0</maven.compiler.version>
+    </properties>
+    <build>
+        <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven.compiler.version}</version>
+                    <configuration>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
+                    </configuration>
+                </plugin>
+        </plugins>
+    </build>
 </project>
